# turn-based-rpg

./: .gitignore  CMakeLists.txt  README.md  main.c
src/: main.c
src/battle/: battle.c  battle.h
src/character/: character.c  character.h
src/game/: game.c  game.h
src/menu/: menu.c  menu.h
src/utils/: colors.h  terminal.c  terminal.h  utils.c  utils.h
utils/: utils.c  utils.h
